<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--    <Preference
            android:defaultValue="-16746133"
            android:key="pref_key_theme"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_theme_summary_alt"
            android:title="@string/pref_theme" />
        <ListPreference
            android:defaultValue="light"
            android:entries="@array/background_titles"
            android:entryValues="@array/background_values"
            android:key="pref_key_background"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_background_summary"
            android:title="@string/pref_background" />-->

    <PreferenceCategory
        android:layout="@layout/list_item_preference_category"
        android:title="@string/pref_subcat_send_options">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_enable_sim"
            android:layout="@layout/list_item_preference"
            android:title="@string/pref_send_options_title"
            android:widgetLayout="@layout/view_switch" />

    </PreferenceCategory>


    <PreferenceCategory
        android:layout="@layout/list_item_preference_category"
        android:title="@string/pref_subcat_categories">
        <Preference
            android:icon="@drawable/ic_palette"
            android:key="pref_key_category_appearance"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_appearance"
            android:title="@string/pref_category_appearance" />
        <Preference
            android:icon="@drawable/ic_settings"
            android:key="pref_key_category_general"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_general"
            android:title="@string/pref_category_general" />
        <Preference
            android:icon="@drawable/ic_notifications"
            android:key="pref_key_category_notifications"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_notifications"
            android:title="@string/pref_category_notifications" />

        <Preference
            android:icon="@drawable/ic_compose"
            android:key="pref_key_category_quickcompose"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_quickcompose"
            android:title="@string/pref_category_quickcompose" />
        <Preference
            android:icon="@drawable/ic_info_fill"
            android:key="pref_key_category_about"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_about"
            android:title="@string/pref_category_about" />
    </PreferenceCategory>
</PreferenceScreen>