<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/list_item_preference_category"
        android:title="@string/pref_category_about">
        <Preference
            android:key="pref_key_version"
            android:layout="@layout/list_item_preference"
            android:title="@string/pref_about_version_title" />
        <Preference
            android:key="pref_key_authors"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_about_authors_summary"
            android:title="@string/pref_about_authors_title" />

        <Preference
        android:key="pref_key_fb"
        android:layout="@layout/list_item_preference"
        android:summary="@string/pref_about_fb_summary"
        android:title="@string/pref_about_fb_title" />

     </PreferenceCategory>
</PreferenceScreen>